<resources>
    <string name="app_name">ThereVGo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_intro_slider">IntroSlider</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!--Login and SignUp Screen String Resource -->
    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="phone">Mobile No.</string>
    <string name="not_account_yet">Don\'t have an account?<b> Sign Up now!</b></string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="have_account">Have Account? Login Now !</string>

    <!--error in login and signup string resource-->
    <string name="err_msg_contact">Please Enter Contact No.</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="incorrect_email_password">Incorrect Username &amp; Password</string>

    <!--Login and SignUp Screen String Resource -->

    <!--Generic String Resource-->
    <string name="icon_description">App Image</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>
    <string name="update">Update</string>
    <string name="submit">Submit</string>
    <string name="logo">Logo</string>
    <string name="please_wait">Please Wait</string>
    <string name="error">Error</string>
    <string name="group_name">Group: %1$s</string>
    <string name="add">Add</string>
    <string name="not_valid_photo">This is not a valid file</string>
    <string name="no_internet_available">No Internet Available</string>

    <!-- TODO: Remove or change this placeholder text -->
    <!--Business Listing Fragment String Resource-->
    <string name="listing">Listing</string>
    <string name="fragment_listing_description">ThereVGo provide a complete solution of all issues releated with Business listing, offer listing, New products listing, event listing. This will help you to gain immense profit opportunities.</string>

    <!--Create Follow up fragment string res-->
    <string name="selecttitle">Select Title</string>
    <string name="selectCustType">Select Type</string>

    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="follow_date">Follow-Up Date</string>
    <string name="area">Area</string>
    <string name="city">City/Village</string>
    <string name="save">Save</string>

    <!--Sms Fragment String resource -->
    <string name="message_type">Select Message Type</string>
    <string name="Total_balance">Balance SMS:%s</string>
    <string name="from_date">Start Date :</string>
    <string name="To_date">End Date:</string>
    <string name="ContactNo">Contact No.</string>
    <string name="selectgroup">Select Group</string>
    <string name="send_by">Send By</string>
    <string name="hello_blank_sms_fragment">Buy ThereVGo SMS Plan to activate Send SMS and SMS Hint features which are currently inactive!</string>
    <string name="explore_sms">Explorer Our More SMS Plans</string>
    <string name="number_sepratration">Please Separate each number by Comma (Ex: 98xxxxxxxx,98xxxxxxxxxx) \n Messages Delivery Time is 9:00am to 9:00pm</string>
    <string name="message">Message</string>
    <string name="send_sms">Send SMS</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="business_empty_list">Don\'t have business listing yet \n Tap on + button to create new listing.</string>
    <string name="select_image">Select Image</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="welcome_to_therevgo">WELCOME TO THEREVGO</string>

    <!--Action Mode String Resource-->
    <string name="action_send">Send</string>
    <string name="action_create">Create</string>
    <string name="action_select_all">Select All</string>
    <string name="ok">OK</string>
    <string name="valid_date_range">Please Select valid date range</string>
    <string name="live_your_app">Live Your Listing</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <plurals name="select_service">
        <item quantity="zero">Select Services</item>
        <item quantity="one">1 Service Selected</item>
        <item quantity="other">%d Services Selected</item>
    </plurals>

</resources>
