<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="16dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Spinner
            android:id="@+id/person_title"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            android:prompt="@string/selecttitle"
            android:elevation="2dp"
            android:layout_height="50dip"
            android:layout_marginBottom="8dp"
            android:popupBackground="#EBEBEB"
            android:background="@drawable/editbox"
            android:spinnerMode="dropdown" >

            <requestFocus/>
        </Spinner>
        <Spinner
            android:id="@+id/user_type"
            android:background="@drawable/editbox"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:elevation="2dp"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center_horizontal"
            android:prompt="@string/selectCustType"
            android:popupBackground="#EBEBEB"
            android:spinnerMode="dropdown" />

        <com.client.therevgo.services.customviews.CustomEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:hint="@string/name"
            android:ems="10"
            android:id="@+id/et_name"            
            android:background="@drawable/editbox"
            android:elevation="2dp"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center_horizontal" />

        <com.client.therevgo.services.customviews.CustomEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/phone"
            android:ems="10"
            android:maxLength="10"
            android:id="@+id/et_contact"
            android:background="@drawable/editbox"
            android:elevation="2dp"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center_horizontal" />

        <com.client.therevgo.services.customviews.CustomEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_email"
            android:ems="10"
            android:id="@+id/et_email"
            android:background="@drawable/editbox"
            android:elevation="2dp"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center_horizontal" />

        <com.client.therevgo.services.customviews.CustomEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine|textCapWords"
            android:ems="10"
            android:hint="@string/description"
            android:id="@+id/et_description"
            android:background="@drawable/editbox"
            android:elevation="2dp"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center_horizontal" />

        <com.client.therevgo.services.customviews.CustomEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:hint="@string/follow_date"
            android:ems="10"
            android:id="@+id/et_follow_date"
            android:background="@drawable/editbox"
            android:elevation="2dp"
            android:layout_marginBottom="8dp"
            android:focusable="false"
            android:layout_gravity="center_horizontal" />

        <com.client.therevgo.services.customviews.CustomEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_area"
            android:hint="@string/area"
            android:inputType="textCapWords"
            android:background="@drawable/editbox"
            android:elevation="2dp"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center_horizontal" />

        <com.client.therevgo.services.customviews.CustomEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_city"
            android:hint="@string/city"
            android:inputType="textCapWords"
            android:background="@drawable/editbox"
            android:elevation="2dp"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center_horizontal" />

        <com.client.therevgo.services.customviews.CustomButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/btn_follow_submit"
            android:background="#f90"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>
</ScrollView>