<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/fragmentContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="30dp">


            <ImageView
                android:id="@+id/sign_logo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="20dp"
                android:transitionName="@string/logo"
                android:layout_gravity="center"
                android:src="@drawable/logo"
                tools:ignore="UnusedAttribute"
                android:contentDescription="@string/logo" />

            <com.client.therevgo.customviews.CustomEditText
                android:id="@+id/et_sign_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                android:background="@drawable/editbox"
                android:inputType="textPersonName"
                android:elevation="2dp"
                android:layout_marginBottom="20dp"
                tools:targetApi="lollipop" />

            <com.client.therevgo.customviews.CustomEditText
                android:id="@+id/et_sign_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:elevation="2dp"
                android:background="@drawable/editbox"
                android:inputType="textEmailAddress"
                android:layout_marginBottom="20dp"
                tools:targetApi="lollipop" />


            <com.client.therevgo.customviews.CustomEditText
                android:id="@+id/et_sign_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/editbox"
                android:hint="@string/hint_password"
                android:elevation="2dp"
                android:inputType="textPassword"
                android:layout_marginBottom="20dp"
                tools:targetApi="lollipop" />

            <com.client.therevgo.customviews.CustomEditText
                android:id="@+id/et_sign_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:elevation="2dp"
                android:background="@drawable/editbox"
                android:inputType="phone"
                tools:targetApi="lollipop" />

            <com.client.therevgo.customviews.CustomButton
                android:id="@+id/btn_sign_up"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_sign_up"
                android:background="@color/colorPrimaryDark"
                android:layout_marginTop="20dp"
                android:textColor="@android:color/white"/>


            <com.client.therevgo.customviews.CustomTextView
                android:id="@+id/sign_login_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/have_account"/>

        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>