<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/updown"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:scaleType="center"
        android:src="@drawable/ic_down_01"
        android:visibility="gone" />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/downup"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_above="@+id/updown"
        android:layout_alignParentLeft="true"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:rotation="180"
        android:scaleType="center"
        android:src="@drawable/ic_down_01"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/smsScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin"
            tools:context="com.business.thereVgo.client.SendSms">

            <com.client.therevgo.customviews.CustomTextView
                android:id="@+id/total_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_card_margin"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <com.client.therevgo.customviews.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_card_margin"
                android:gravity="center"
                android:text="@string/number_sepratration"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="12sp" />


            <com.client.therevgo.customviews.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_card_margin"
                android:gravity="center"
                android:text="@string/send_by"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Spinner
                android:id="@+id/select_type"
                android:layout_width="match_parent"
                android:layout_marginBottom="@dimen/activity_card_margin"
                android:popupBackground="#EBEBEB"
                android:background="@drawable/editbox"
                android:spinnerMode="dropdown"
                android:elevation="2dp"
                android:layout_height="50dip"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <LinearLayout
                android:id="@+id/contact_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <com.client.therevgo.customviews.CustomTextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/activity_card_margin"
                    android:gravity="center"
                    android:text="@string/ContactNo"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <com.client.therevgo.customviews.CustomEditText
                        android:id="@+id/et_sms_no"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:maxHeight="100dp"
                        android:layout_marginBottom="2dp"
                        android:layout_weight="1"
                        android:background="@drawable/editbox"
                        android:elevation="2dp"
                        android:ems="10"
                        tools:targetApi="lollipop" />

                    <ImageView
                        android:id="@+id/img_contact_picker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:scaleType="center"
                        android:src="@drawable/ic_contact" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/group_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:visibility="gone"
                android:orientation="vertical">

                <com.client.therevgo.customviews.CustomTextView
                    android:id="@+id/select_group"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/activity_card_margin"
                    android:gravity="center"
                    android:text="@string/selectgroup"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <Spinner
                    android:id="@+id/select_group_spinner"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="@dimen/activity_card_margin"
                    android:popupBackground="#EBEBEB"
                    android:background="@drawable/editbox"
                    android:spinnerMode="dropdown"
                    android:elevation="2dp"
                    android:layout_height="50dip"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <com.client.therevgo.customviews.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:gravity="center"
                    android:text="@string/message"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <com.client.therevgo.customviews.CustomEditText
                    android:id="@+id/et_sms_message"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxHeight="100dp"
                    android:background="@drawable/editbox"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:elevation="2dp"
                    android:inputType="textCapSentences|textMultiLine"
                    android:scrollbars="vertical"
                    tools:targetApi="lollipop" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <CheckBox
                    android:id="@+id/save_check_box"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.7"
                    android:text="I agree to save my sms" />

                <com.client.therevgo.customviews.CustomButton
                    android:id="@+id/btn_send_msg"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:background="#f90"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:text="@string/send_sms"
                    android:textColor="@android:color/white" />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</RelativeLayout>
